# google_batch_sitemap

./: .gitignore  Cargo.toml
migrations/: 1_sitemap.sql
src/: db.rs  main.rs  oauth.rs
src/db/: method.rs
src/utils/: indexing.rs  mod.rs
