[package]
name = "seo_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dirs = "5.0.1"
eyre = "0.6.9"
google-indexing-api = "0.1.4"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
roxmltree = "0.19.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "migrate", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
yup-oauth2 = "8.3.0"

[dev-dependencies]
dotenvy = "*"
